Added ScheduleTestNG, Test Classes/Utils. Updated ReadMe/Compatibility
Added testing and made the project fully compatible with Java 8 and higher.